# rust_find

./: Cargo.toml  README.md  out.txt
src/: lib.rs  main.rs
