[package]
name = "rust_find"
version = "0.1.0"
authors = ["davincii1889"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rust_find"
path = "src/main.rs"


[dependencies]
regex = "1.5"
slog = "2.7.0"
slog-term = "2.8.0"
glob = "0.3.0"

[dependencies.clap]
version = "3.0.0-beta.4"
features = ["wrap_help"]
